--- a/frontend/src/app/filters/filters.component.html
+++ b/frontend/src/app/filters/filters.component.html
@@ -12,15 +12,14 @@
           <mat-icon *ngIf="!sidenav.opened">keyboard_arrow_right</mat-icon>
         </button>
       </mat-toolbar>
-      <mat-accordion>
-        <mat-expansion-panel (opened)="panelOpenState = true"
-                             (closed)="panelOpenState = false">
+      <mat-accordion multi>
+        <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle="true" >
           <mat-expansion-panel-header>
             <mat-panel-title>
               Magnitude:
             </mat-panel-title>
             <mat-panel-description>
-              Seismic level of earthquake
+              Seismic level of earthquakes
             </mat-panel-description>
           </mat-expansion-panel-header>
           <p>Set minimum and maximum magnitude!</p>
@@ -43,8 +42,7 @@
             </mat-card-content>
           </mat-card>
         </mat-expansion-panel>
-        <mat-expansion-panel (opened)="panelOpenState = true"
-                             (closed)="panelOpenState = false">
+        <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)" hideToggle="true" >
           <mat-expansion-panel-header>
             <mat-panel-title>
               Date range:
@@ -56,7 +54,7 @@
           <p>Set date range of earthquakes!</p>
           <mat-card>
             <mat-card-content>
-              <mat-form-field class="date-field">
+              <mat-form-field class="full-field">
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]="rangePicker">
                   <input matStartDate [formControl]="$any(form).controls['date_start']" placeholder="Start date">
@@ -74,13 +72,13 @@
             </mat-card-content>
           </mat-card>
         </mat-expansion-panel>
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)" hideToggle="true" >
           <mat-expansion-panel-header>
             <mat-panel-title>
               Area
             </mat-panel-title>
             <mat-panel-description>
-              Geographic area of earthquake
+              Geographic area of earthquakes
             </mat-panel-description>
           </mat-expansion-panel-header>
           <p>Input coordinates of points or draw rectangle on the map!</p>
@@ -111,10 +109,6 @@
                   <img src="assets/world-map-transparent.png" id="world-map" alt="world-map">
                 </mat-card-content>
               </mat-card>
-<!--              <div class="map-picker" (click)="openDialog()">-->
-<!--&lt;!&ndash;              <div class="map-picker" (click)="openDialog()">&ndash;&gt;-->
-<!--                -->
-<!--              </div>-->
               <div class="bottom-right">
                 <mat-form-field id="bottom_right_y">
                   <mat-label>Bottom right Y</mat-label>
@@ -138,13 +132,51 @@
             </mat-card-content>
           </mat-card>
         </mat-expansion-panel>
-        <button class="open-filter" mat-button (click)="sidenav.toggle()">
-          <mat-icon *ngIf="sidenav.opened">keyboard_arrow_left</mat-icon>
-          <mat-icon *ngIf="!sidenav.opened">keyboard_arrow_right</mat-icon>
-        </button>
+        <mat-expansion-panel [expanded]="step === 3" (opened)="setStep(3)" hideToggle="true" >
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Type:
+            </mat-panel-title>
+            <mat-panel-description>
+              Type of earthquakes
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>Select type of earthquakes!</p>
+          <mat-card>
+            <mat-card-content>
+              <mat-form-field class="full-field">
+                <mat-label>Earthquake type</mat-label>
+                <mat-select [formControl]="$any(form).controls['type']" required>
+                  <mat-option><em>Select</em></mat-option>
+                  <mat-option *ngFor="let type of types" [value]="type">
+                    {{type}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="submit-panel" disabled expanded>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Submit:
+            </mat-panel-title>
+            <mat-panel-description>
+              Submit the form
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>Click Submit to submit the form!</p>
+          <mat-card>
+            <mat-card-content>
+              <mat-card-actions align="end">
+                <button mat-button>LIKE</button>
+                <button mat-button>SHARE</button>
+              </mat-card-actions>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
       </mat-accordion>
     </mat-sidenav>
-
   </mat-sidenav-container>
   <button mat-icon-button (click)="sidenav.toggle()">
     <mat-icon *ngIf="sidenav.opened" style="color: black">keyboard_arrow_left</mat-icon>
