--- a/frontend/src/app/filters/filters.component.html
+++ b/frontend/src/app/filters/filters.component.html
@@ -169,8 +169,8 @@
           <mat-card>
             <mat-card-content>
               <mat-card-actions align="end">
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
+                <button (click)="reset()" mat-button>Reset</button>
+                <button (click)="submit()" mat-button>Apply</button>
               </mat-card-actions>
             </mat-card-content>
           </mat-card>
