--- a/frontend/src/app/filters/filters.component.html
+++ b/frontend/src/app/filters/filters.component.html
@@ -65,9 +65,11 @@
                 <mat-date-range-picker #rangePicker>
                   <mat-date-range-picker-actions>
                     <button mat-button matDateRangePickerCancel>Cancel</button>
-                    <button mat-raised-button color="primary" matDateRangePickerApply>Apply</button>
+                    <button mat-button matDateRangePickerCancel (click)="clearDate()">Reset</button>
+                    <button mat-raised-button matDateRangePickerApply>Apply</button>
                   </mat-date-range-picker-actions>
                 </mat-date-range-picker>
+                <mat-error>Invalid date range</mat-error>
               </mat-form-field>
             </mat-card-content>
           </mat-card>
@@ -129,6 +131,9 @@
                   <input [formControl]="$any(form).controls['bottom_left_lng']" matInput>
                 </mat-form-field>
               </div>
+              <div class="all-eight">
+                <mat-hint *ngIf="!allEightCoordinates()">You must set all 8 coordiantes</mat-hint>
+              </div>
             </mat-card-content>
           </mat-card>
         </mat-expansion-panel>
@@ -145,8 +150,14 @@
           <mat-card>
             <mat-card-content>
               <mat-form-field class="full-field">
-                <mat-label>Earthquake type</mat-label>
-                <mat-select [formControl]="$any(form).controls['type']" required>
+                <mat-label *ngIf="!loading">Earthquake type</mat-label>
+                <mat-label *ngIf="loading">
+                  <div class="loading-spinner">
+                    <span>Loading...</span>
+                    <mat-spinner class="spinner" diameter="20"></mat-spinner>
+                  </div>
+                </mat-label>
+                <mat-select [formControl]="$any(form).controls['type']">
                   <mat-option><em>Select</em></mat-option>
                   <mat-option *ngFor="let type of types" [value]="type">
                     {{type}}
@@ -170,7 +181,7 @@
             <mat-card-content>
               <mat-card-actions align="end">
                 <button (click)="reset()" mat-button>Reset</button>
-                <button (click)="submit()" mat-button>Apply</button>
+                <button (click)="submit()" [disabled]="!formValid" mat-button>Apply</button>
               </mat-card-actions>
             </mat-card-content>
           </mat-card>
