--- a/frontend/src/app/filters/filters.component.html
+++ b/frontend/src/app/filters/filters.component.html
@@ -6,7 +6,7 @@
     <mat-sidenav #sidenav mode="over" opened class="main-sidenav">
       <mat-toolbar>
         <span>Filters</span>
-        <span class="example-spacer"></span>
+        <span class="spacer"></span>
         <button class="close" mat-icon-button (click)="sidenav.toggle()">
           <mat-icon *ngIf="sidenav.opened">keyboard_arrow_left</mat-icon>
           <mat-icon *ngIf="!sidenav.opened">keyboard_arrow_right</mat-icon>
