--- a/frontend/src/app/filters/filters.component.scss
+++ b/frontend/src/app/filters/filters.component.scss
@@ -2,10 +2,6 @@
   display: flex;
 }
 
-.open-filter {
-  float: right;
-}
-
 .mat-mdc-form-field + .mat-mdc-form-field {
   margin-left: 8px;
 }
@@ -69,48 +65,43 @@
   position: relative;
 }
 
-.top-left {
+.coordinates-form-field {
   position: absolute;
+  ::ng-deep .mat-mdc-form-field-bottom-align {
+    display: none;
+  }
+}
+
+.top-left {
+  @extend .coordinates-form-field;
   top: 0;
   left: 0;
   padding-top: 15px;
   padding-left: 15px;
-  ::ng-deep .mat-mdc-form-field-bottom-align {
-    display: none;
-  }
 }
 
 .top-right {
-  position: absolute;
+  @extend .coordinates-form-field;
   top: 0;
   right: 0;
   padding-top: 15px;
   padding-right: 15px;
-  ::ng-deep .mat-mdc-form-field-bottom-align {
-    display: none;
-  }
 }
 
 .bottom-right {
-  position: absolute;
+  @extend .coordinates-form-field;
   bottom: 28px;
   right: 0;
   padding-bottom: 15px;
   padding-right: 15px;
-  ::ng-deep .mat-mdc-form-field-bottom-align {
-    display: none;
-  }
 }
 
 .bottom-left {
-  position: absolute;
+  @extend .coordinates-form-field;
   bottom: 28px;
   left: 0;
   padding-bottom: 15px;
   padding-left: 15px;
-  ::ng-deep .mat-mdc-form-field-bottom-align {
-    display: none;
-  }
 }
 
 .all-eight {
@@ -130,15 +121,11 @@
   cursor: pointer;
 }
 
-.latitude {
-  justify-content: space-between;
-}
-
 #world-map {
   height: 200px;
 }
 
-.example-spacer {
+.spacer {
   flex: 1 1 auto;
 }
 
@@ -146,17 +133,9 @@
   width: 95%;
 }
 
-.card h2 {
-  margin: 0 8px;
-}
-
 .slider {
   display: block;
   margin: 20px 10px 0;
-}
-
-.card .label-value {
-  font-weight: 600;
 }
 
 .min {
@@ -169,10 +148,6 @@
 }
 
 .full-field {
-  width: 100%;
-}
-
-.id-field {
   width: 100%;
 }
 
