move all components to 'component' directory

--- a/frontend/src/app/components/filters/filters.component.html
+++ b/frontend/src/app/components/filters/filters.component.html
@@ -115,7 +115,7 @@
               <mat-card class="map-picker" (click)="openDialog()"
                         [ngStyle]="{'top': allEightCoordinates() ? '20%' : '18.2%'}">
                 <mat-card-content>
-                  <img src="assets/world-map-transparent.png" id="world-map" alt="world-map">
+                  <img src="../../../assets/world-map-transparent.png" id="world-map" alt="world-map">
                 </mat-card-content>
               </mat-card>
               <div class="bottom-right" [ngStyle]="{'bottom': allEightCoordinates() ? '0' : '40px'}">
