--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="main">
-  <div class="filters" [style.height]="sidenavOpened === 'open' ? '100%' : '45px' ">
-    <app-filters (filterTransfer)="filters=$event" (sidenavOpenWidth)="sidenavOpened=$event"></app-filters>
+  <div [style.height]="sidenavOpened === 'open' ? '100%' : '45px' " class="filters">
+    <app-filters (filterTransfer)="filters=$event" (sidenavOpenWidth)="sidenavOpened=$event"
+                 [earthquakeIds]="earthquakeIds"></app-filters>
   </div>
   <div class="map">
-    <app-earthquake-map [filtersTransfered]="filters"></app-earthquake-map>
+    <app-earthquake-map (earthquakesIdsTransfer)="earthquakeIds=$event"
+                        [filtersTransfered]="filters"></app-earthquake-map>
   </div>
 </div>
 
